Bug 508556 - "Apply system update" setting is not relevant with sysupdate backend
Summary: "Apply system update" setting is not relevant with sysupdate backend
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_updates (other bugs)
Version First Reported In: 6.4.80
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-21 13:56 UTC by Nate Graham
Modified: 2025-09-19 02:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2025-08-21 13:56:28 UTC
On KDE Linux with the sysupdate backend, updates are always applied on reboot. This setting therefore does not need to be shown when that backend is enabled.
Comment 1 Bug Janitor Service 2025-09-10 14:54:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/1148
Comment 2 Aleix Pol 2025-09-14 20:58:11 UTC
Git commit 1a527660dd6a127711ba53d685a78448940c2593 by Aleix Pol.
Committed on 14/09/2025 at 17:23.
Pushed by apol into branch 'master'.

kcm/updates: don't ask when to apply the updates on KDE Linux

Much like in Kinoite, KDE Linux's updates always happen upon reboot. Do
not add an inactionable option.

M  +6    -0    kcm/CMakeLists.txt
M  +1    -1    kcm/ui/main.qml
M  +2    -2    kcm/updates.cpp
M  +5    -5    kcm/updates.h

https://invent.kde.org/plasma/discover/-/commit/1a527660dd6a127711ba53d685a78448940c2593