kcm/updates: don't ask when to apply the updates on KDE Linux

Much like in Kinoite, KDE Linux's updates always happen upon reboot. Do
not add an inactionable option.

BUG: 508556